[package]
name = "laesutkontroll"
version = "0.2.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.24", features = ["cookies"] }
tokio = { version = "1.36.0", features = ["full"] }
scraper = "0.18.1"
chrono = "0.4.33"
regex = "1.10.3"